# dynamic-system-program-synthesis

./: .gitignore  README.md  pyproject.toml  report.ipynb  requirements.txt
src/: main.py
