[project]
name = "dynamic-system-program-synthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
